# CalculadoraOOP

./: CMakeLists.txt  main.cpp
Calculadora/: Calculadora.cpp  Calculadora.h
Helpers/: Helpers.cpp  Helpers.h
